New Project added

--- a/index.html
+++ b/index.html
@@ -74,6 +74,13 @@
                         3D Modeling Tool
                     </div>
                 </div>
+
+                <div class="project-item light" project="jigsaw-puzzle">
+                    <img src="images/jigsaw-framework.png">
+                    <div class="title">
+                        Jigzaw Puzzle Framework
+                    </div>
+                </div>
             </div>
         </div>
         
