--- a/projects/lego-tool/index.html
+++ b/projects/lego-tool/index.html
@@ -191,11 +191,10 @@
                 } : null;
             }
         </script>
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/babylonjs/5.4.0/babylon.js" integrity="sha512-kSA3rz4hx/x28DsnqE2s/K5M9EBLwDrak2CHVM6C5E9f5n5+pEyhGRrIBhogmkXcnzP6SaisEMrmBKGEbg4blg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <script src="js/babylon.js"></script>
         <script src="js/babylon.gridMaterial.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/babylonjs-loaders@3.2.0-alpha10/babylonjs.loaders.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/babylonjs-loaders@5.4.0/babylon.glTF2FileLoader.min.js"></script>
+        <!--<script src="js/babylonjs.loaders.js"></script>
+        <script src="js/babylon.glTF2FileLoader.min.js"></script>-->
         <script src="js/modeler.js"></script>
         <script src="js/inspector.js"></script>
         <script src="js/app.js"></script>
