Layout and Styles cleaned up

--- a/projects/lego-3d/index.html
+++ b/projects/lego-3d/index.html
@@ -21,12 +21,25 @@
         </div>
         <canvas id="editor"></canvas>
         <div class="inspector">
+            <div class="inspector-elements">
 
-        </div>
-        <div class="bottom-bar">
+            </div>
+            <hr>
+            <div class="inspector-properties">
+                <div class="color-select">
+                    <div class="dropdown">
 
+                    </div>
+                    <div class="value">
+                        <div class="color" style="background-color:white;"></div>
+                        <div class="name">White</div>
+                    </div>
+                    <div class="arrow">
+                        <i class='bx bx-chevron-down'></i>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="inspector-toggle"><i class='bx bx-chevron-left'></i></div>
     </div>
     <script src="js/babylon.js"></script>
     <script src="js/babylon.gridMaterial.min.js"></script>
