Project List updated

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
                     </div>
                 </div>
 				
-				<div class="project-item light" project="modeling-tool">
-                    <img src="images/modeling-tool.png">
+				<div class="project-item light" project="lego-3d">
+                    <img src="images/lego-3d.png">
                     <div class="title">
-                        3D Modeling Tool
+                        Lego Modeling Tool
                     </div>
                 </div>
 
