Added more models

--- a/projects/lego-3d/index.html
+++ b/projects/lego-3d/index.html
@@ -57,8 +57,11 @@
             </div>
         </div>
         <div class="tool-box">
-            <div class="search-wrapper"></div>
+            <div class="search-wrapper">
+                <input type="text" placeholder="Search..." id="search-input">
+            </div>
         </div>
+        <div class="fps hidden">FPS 0</div>
         <canvas id="editor"></canvas>
         <div class="inspector">
             <div class="inspector-elements">
