--- a/projects/mandelbrot/index.html
+++ b/projects/mandelbrot/index.html
@@ -21,6 +21,7 @@
             <option value="Rainbow Variation">Rainbow Variation</option>
         </select>
         <input class="shader-variable" style="display:none;" type="number" id="greenMatrixColorMultiplier" min="4.0" value="64.0" step="0.5" max="255.0">
+        <input class="shader-variable" style="display:none;" type="number" id="greenMatrixType" min="0.0" value="1.0" step="1.0" max="3.0">
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/async/3.2.4/async.min.js" integrity="sha512-0ewcnFb590plq2BJFUSpSbysjDZaj1Jsdkqt5ldhGE/nXJFCbhI/hXuonRIft5WwwlPj87/k3NU2wUyAWUJV0w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="js/app.js"></script>
