The Start State can now be configured

--- a/projects/state-machine-drawing/index.html
+++ b/projects/state-machine-drawing/index.html
@@ -53,6 +53,10 @@
                     <label>Name:</label>
                     <input type="text">
                 </div>
+                <div class="input-wrapper" id="isStart" setting-type="state">
+                    <label>Is Start:</label>
+                    <input type="checkbox">
+                </div>
             </div>
             <div class="none">
                 Nothing selected
