Added Missing Projects and small changes

--- a/index.html
+++ b/index.html
@@ -243,6 +243,60 @@
                         </div>
                     </div>
                 </div>
+                <div class="item">
+                    <div class="top-left-right"></div>
+                    <div class="top-left-bottom"></div>
+                    <div class="bottom-right-left"></div>
+                    <div class="bottom-right-top"></div>
+                    <img src="img/finite-state.png">
+                    <div class="info">
+                        <div class="name">State Machine Drawing</div>
+                        <div class="tools">
+                            <div class="tool">HTML</div>
+                            <div class="tool">CSS</div>
+                            <div class="tool">Javascript</div>
+                            <div class="tool">Canvas</div>
+                        </div>
+                        <div class="description">
+                            A Tool with which you can create Finite State Machines and let them run in the browser.
+                        </div>
+                        <div class="visit-btn" url="state-machine-drawing">
+                            <div class="content">
+                                <span>Visit</span>
+                                <i class='bx bx-link'></i>
+                            </div>
+                            <div class="hover-box"></div>
+                            <div class="border-box"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="top-left-right"></div>
+                    <div class="top-left-bottom"></div>
+                    <div class="bottom-right-left"></div>
+                    <div class="bottom-right-top"></div>
+                    <img src="img/mandelbrot.png">
+                    <div class="info">
+                        <div class="name">Mandelbrot</div>
+                        <div class="tools">
+                            <div class="tool">HTML</div>
+                            <div class="tool">CSS</div>
+                            <div class="tool">Javascript</div>
+                            <div class="tool">Canvas</div>
+                        </div>
+                        <div class="description">
+                            An Interactive Mandelbrot Set. (Customizable with Shaders)
+                        </div>
+                        <div class="visit-btn" url="mandelbrot">
+                            <div class="content">
+                                <span>Visit</span>
+                                <i class='bx bx-link'></i>
+                            </div>
+                            <div class="hover-box"></div>
+                            <div class="border-box"></div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         
