--- a/projects/webgl-voxel-terrain-generator/index.html
+++ b/projects/webgl-voxel-terrain-generator/index.html
@@ -18,6 +18,9 @@
             <select id="biomeSelect">
                 <option value="plains">Plains</option>
                 <option value="desert">Desert</option>
+                <option value="mines">Mines</option>
+                <option value="goldmines">Gold-Mines</option>
+                <option value="water">Water</option>
             </select>
         </div>
         <div class="setting">
