--- a/projects/HUDW8/index.html
+++ b/projects/HUDW8/index.html
@@ -365,7 +365,7 @@
         [0,Math.PI/2,0],
         [0,-Math.PI/2,0],
         [Math.PI/2,0,0],
-        [-Math.PI/2,0,0]
+        [-Math.PI/2,0,0],
     ];
 
     import * as THREE from 'three';
