--- a/projects/audio-visualizer/index.html
+++ b/projects/audio-visualizer/index.html
@@ -1,115 +1,93 @@
-<html>
-    <head>
-        <title>Audio Visualizer</title>
-        <link rel="icon" href="../../icon.png">
-        <link rel="stylesheet" href="visualizer.css">
-    </head>
-    <body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Audio Playground</title>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+</head>
+<body>
+    <div class="bg">
+        <img src="bg.jpg">
+    </div>
+    <div id="app">
+        <audio></audio>
+        <div id="viewport">
+            <canvas></canvas>
+        </div>
         <div id="menu">
-            <div id="header">
-                Menu
+            <div class="drop-area">
+                <div class="border">
+                    <i class='bx bx-cloud-upload'></i>
+                    <span>Drag and drop your audio file here</span>
+                </div>
+                <input type="file" id="file-input" accept="audio/*">
             </div>
-            <div class="menu-category">
-                <div class="menu-category-title">Music</div>
-                <div class="wrapper">
-                    <span>File:</span>
-                    <input id="audio_file" type="file" accept="audio/*" />
+            <div id="current-file">
+                <div class="file-name"><span></span></div>
+                <div class="file-size"></div>
+            </div>
+            <div class="audio-controls">
+                <div class="play-btn">
+                    <i class='bx bx-play'></i>
                 </div>
-                <div class="wrapper">
-                    <span>Volume:</span>
-                    <input type="range" min="0" max="2" value="1" step="0.01" id="volume-slider">
+                <input type="range" id="volume" min="0" max="100" value="10">
+            </div>
+            <div class="type-select">
+                <div class="type" data-type="bar">
+                    <i class='bx bx-bar-chart'></i>
+                    <span>Bar</span>
                 </div>
-                <div class="wrapper">
-                    <span>Play/Pause:</span>
-                    <button id="play-btn">Pause</button>
+                <div class="type" data-type="circle-bar">
+                    <i class='bx bx-circle'></i>
+                    <span>Circle - Bar</span>
+                </div>
+                <div class="type" data-type="circle-wave">
+                    <i class='bx bx-circle'></i>
+                    <span>Circle - Wave</span>
                 </div>
             </div>
-            <div class="menu-category">
-                <div class="menu-category-title"></div>
-                <div class="wrapper">
-                    <span class="color">BG-Color:</span>
-                    <input oninput="document.querySelector('canvas').style.backgroundColor = this.value;" id="color-input" type="color">
+            <div class="header">Options:</div>
+            <div class="visualizer-options">
+                <div class="option" data-type="bar|circle-bar|circle-wave">
+                    <span>Normalize:</span>
+                    <input type="checkbox" id="normalize" checked>
                 </div>
-            </div>
-            <div class="menu-category">
-                <div class="menu-category-title">Bar-Settings</div>
-                <div class="wrapper">
-                    <span class="color">Gradient-Start:</span>
-                    <input id="gradient-start-input" value="#33C0FF" type="color">
-                </div>
-                <div class="wrapper">
-                    <span class="color">Gradient-Stop:</span>
-                    <input id="gradient-stop-input" value="#75FF33" type="color">
-                </div>
-                <div class="wrapper">
-                    <span>Bars:</span>
-                    <select id="barNumber">
-                        <option value="32">32</option>
-                        <option value="4">4</option>
-                        <option value="8">8</option>
-                        <option value="16">16</option>
-                        <option value="64">64</option>
+                <div class="option" data-type="bar|circle-bar">
+                    <span>Bar Count:</span>
+                    <select id="bar-select">
                         <option value="128">128</option>
+                        <option value="32">32</option>
+                        <option value="64">64</option>
                         <option value="256">256</option>
                         <option value="512">512</option>
                     </select>
                 </div>
-                <div class="wrapper">
-                    <span>Volume Influence:</span>
-                    <input type="checkbox" id="volumeInfluenceCheckBox">
+                <div class="option" data-type="circle-wave">
+                    <span>Wave Point Count:</span>
+                    <select id="wave-point-select">
+                        <option value="128">128</option>
+                        <option value="32">32</option>
+                        <option value="64">64</option>
+                        <option value="256">256</option>
+                        <option value="512">512</option>
+                    </select>
                 </div>
-                <div class="wrapper">
-                    <span>Reverse Low Bars:</span>
-                    <input type="checkbox" id="reverseLowBarsCheckBox">
-                </div>
-                <div class="wrapper">
-                    <span>Normalize:</span>
-                    <input type="checkbox" id="normalizeCheckBox">
+                <div class="option" data-type="circle-bar|circle-wave">
+                    <span>Circle Radius:</span>
+                    <input type="number" id="circle-radius" min="1" max="500" value="200">
                 </div>
             </div>
-            <div class="spacer"></div>
         </div>
-        <audio src="Ashes_Nate.mp3"></audio>
-        <canvas id="canvas"></canvas>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/6.2.2/browser/pixi.js" integrity="sha512-LDLGJ6FCTB3cSU6TwQhQHT4n1Sje3K1fXCesgME845YTEKNGfQaEnPcLNIqNJ6E3ua65VCL9CVVBdr9G+E7cnw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    </body>
+    </div>
+
+    <script src="audio.js"></script>
+    <script src="visualizer.js"></script>
     <script src="app.js"></script>
-    <script>
-
-    var audio_file = document.querySelector('#audio_file');
-    var audioElement = document.querySelector('audio');
-    var playButton = document.querySelector("#play-btn");
-    var volumeControl = document.querySelector("#volume-slider");
-    var canvas = document.querySelector('canvas');
-    var volumeInfluenceCheckBox = document.querySelector('#volumeInfluenceCheckBox');
-    var reverseLowBarsCheckBox = document.querySelector('#reverseLowBarsCheckBox');
-    var normalizeCheckBox = document.querySelector('#normalizeCheckBox');
-    var barNumberSelect = document.querySelector('#barNumber');
-    var gradientStartInput = document.querySelector("#gradient-start-input");
-    var gradientEndInput = document.querySelector("#gradient-stop-input");
-
-    audio_file.onchange = function(){
-        var files = this.files;
-        var file = URL.createObjectURL(files[0]); 
-        audioElement.src = file; 
-        audioElement.play();
-
-        canvas.width = window.innerWidth - 500;
-        canvas.height = window.innerHeight - 125;
-
-        var visualizer = new Visualizer
-            (
-                audioElement,
-                playButton,
-                volumeControl,
-                barNumberSelect,
-                volumeInfluenceCheckBox,
-                reverseLowBarsCheckBox,
-                normalizeCheckBox,
-                gradientStartInput,
-                gradientEndInput
-            );
-        visualizer.update();
-    };
-    </script>
+</body>
 </html>
